arreglo de errores con el home y  mas correcciones